refactor: usando CurrentUser para registrar com segurança o profissional na prescrição